# tdoa

./: README.md  gradient_solver.py  scipy_solver.py
cpp/: CMakeLists.txt
cpp/include/: tdoa_dlib_solver.hpp
cpp/src/: main.cpp  main_dlib.cpp  tdoa_dlib_solver.cpp
python/: gradient_solver.py  scipy_solver.py  test_data.py
